# Sorting-Algorithm-Visualisation

./: CMakeLists.txt  README.md  main.cpp
Controller/: SortController.cpp  SortController.h
Model/: Model.h
View/: View.cpp  View.h
